--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -123,3 +124,5 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+.idea/
